--- a/readfile.html
+++ b/readfile.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Select one EXP file and then drag them to the below drop box:</h1>
+    <h3>Select a .DST, .EXP, .JEF, .PCS, .PEC, .PES, .VP3, or .XXX file or drag and drop one to the drop box below:</h3>
         <input type="file" id="files" name="files[]" multiple />
     <div id="fileDropBox">Drop files here.</div>
     <canvas id="mycanvas"></canvas>
