Adding initial support for SEW format and a download button to download a thumbnail image of an embroidery file

--- a/readfile.html
+++ b/readfile.html
@@ -15,18 +15,20 @@
     </style>
   </head>
   <body>
-    <h3>Select a .DST, .EXP, .JEF, .PCS, .PEC, .PES, .VP3, or .XXX file or drag and drop one to the drop box below:</h3>
+    <h3>Select a .DST, .EXP, .JEF, .PCS, .PEC, .PES, .SEW, .VP3, or .XXX file or drag and drop one to the drop box below:</h3>
         <input type="file" id="files" name="files[]" multiple />
     <div id="fileDropBox">Drop files here.</div>
     <canvas id="mycanvas"></canvas>
+	<a href="#" id="btn-download">Download</a>
     <script src="jdataview.js"></script>
     <script src="pattern.js"></script>
-    <script src="expformat.js"></script>
-    <script src="pesformat.js"></script>
-    <script src="pecformat.js"></script>
-    <script src="pcsformat.js"></script>
     <script src="dstformat.js"></script>
+    <script src="expformat.js"></script>
+    <script src="pcsformat.js"></script>
+    <script src="pecformat.js"></script>
+    <script src="pesformat.js"></script>
     <script src="jefformat.js"></script>
+    <script src="sewformat.js"></script>
     <script src="vp3format.js"></script>
     <script src="xxxformat.js"></script>
     <script src="main.js"></script>
