Initial port of EXY format.
(basically the same as DST with minor changes)

--- a/readfile.html
+++ b/readfile.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h3>Select a .DST, .EXP, .JEF, .PCS, .PEC, .PES, .SEW, .VP3, or .XXX file or drag and drop one to the drop box below:</h3>
+    <h3>Select a .DST, .EXP, .EXY, .JEF, .PCS, .PEC, .PES, .SEW, .VP3, or .XXX file or drag and drop one to the drop box below:</h3>
         <input type="file" id="files" name="files[]" multiple />
     <div id="fileDropBox">Drop files here.</div>
     <canvas id="mycanvas"></canvas>
@@ -24,6 +24,7 @@
     <script src="pattern.js"></script>
     <script src="dstformat.js"></script>
     <script src="expformat.js"></script>
+    <script src="exyformat.js"></script>
     <script src="pcsformat.js"></script>
     <script src="pecformat.js"></script>
     <script src="pesformat.js"></script>
