--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h3>Select a .DST, .EXP, .EXY, .JEF, .PCS, .PEC, .PES, .SEW, .VP3, .XXX or .Z00 file or drag and drop one to the drop box below:</h3>
+    <h3>Select a .DST, .EXP, .EXY, .JEF, .PCS, .PEC, .PES, .SEW, .TAP, .VP3, .XXX or .Z00 file or drag and drop one to the drop box below:</h3>
         <input type="file" id="files" name="files[]" multiple />
     <div id="fileDropBox">Drop files here.</div>
     <canvas id="mycanvas"></canvas>
@@ -30,6 +30,7 @@
     <script src="pesformat.js"></script>
     <script src="jefformat.js"></script>
     <script src="sewformat.js"></script>
+    <script src="tapformat.js"></script>
     <script src="vp3format.js"></script>
     <script src="xxxformat.js"></script>
     <script src="zskformat.js"></script>
